deploy/kubectl/netlifycms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-auth
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: github-auth
